testsuite/tests/parser/should_fail/cmdFail006.hs
{-# LANGUAGE Arrows #-}
module CmdFail006 where

f = proc x -> ~(_ -< _)
