testsuite/tests/parser/should_fail/cmdFail006.stderr

cmdFail006.hs:4:15: error: Parse error in command: ~(_ -< _)
